--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 # MongoDB
-MONGO_URI=mongodb+srv://dholnamra20:Namra%40123@namra.u3gqm.mongodb.net/streamfiy/
+MONGO_URI=mongodb+srv://dholnamra20:Namra%40123@namra.u3gqm.mongodb.net/streamfiy
 
 # Cloudinary
 CLOUDINARY_CLOUD_NAME=dxictm10x
