--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.16.4",
     "multer": "^2.0.2",
+    "nodemon": "^3.1.10",
     "streamifier": "^0.1.1"
   }
 }
