--- a/Frontend/Stream_Hub_Interface/package.json
+++ b/Frontend/Stream_Hub_Interface/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "hls.js": "^1.6.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.7.0"
+    "react-router-dom": "^7.7.0",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
