--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,20 @@
 {
   "type": "module",
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
   "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "body-parser": "^2.2.0",
-    "cloudinary": "^2.7.0",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
-    "express": "^5.1.0",
+    "dotenv": "^16.3.1",
+    "mongoose": "^8.0.3",
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.4",
-    "multer": "^2.0.2",
-    "nodemon": "^3.1.10",
-    "streamifier": "^0.1.1"
+    "multer": "^1.4.5-lts.1",
+    "cloudinary": "^1.41.0",
+    "node-media-server": "^2.6.2",
+    "socket.io": "^4.7.4",
+    "uuid": "^9.0.1"
   }
 }
